--- a/index.html
+++ b/index.html
@@ -28,18 +28,18 @@
       </form>
     </section>
     <section aria-labelledby='features' id='text-section'>
-      <img id='stuff-1' src='https://sun9-east.userapi.com/sun9-36/s/v1/if2/TkmcKFOdJiC3gv1kF6fcXhcuPGRyeDiOYcMiYSa7B3vtGtwy1opyXyVIukTHWlKjmJ-4Z0DZ_7oaBrSjxvwKbFqS.jpg?size=512x512&quality=95&type=album'>
+      <img id='stuff-1' width='50px' height='50px' src='https://sun9-east.userapi.com/sun9-36/s/v1/if2/TkmcKFOdJiC3gv1kF6fcXhcuPGRyeDiOYcMiYSa7B3vtGtwy1opyXyVIukTHWlKjmJ-4Z0DZ_7oaBrSjxvwKbFqS.jpg?size=512x512&quality=95&type=album'>
       <div class='container-1'>
         <p id='features' class='section-name'>
 Premium Materials</p>
       <p class='text'>All manufacturers are trying to reduce the price of the product. We do not save on quality.</p>
       </div>
-      <img id='stuff-2' src='https://sun9-east.userapi.com/sun9-29/s/v1/if2/44FaK80ZPoCkhtFoYmsnaveFv0UCPk8KoPFkn0TyRlsswKAyVIYRvLnq-CoLkAaDP0qN6dcycZFtxWSjy_B4Fpoi.jpg?size=512x512&quality=95&type=album'>
+      <img id='stuff-2' width='50px' height='50px'  src='https://sun9-east.userapi.com/sun9-29/s/v1/if2/44FaK80ZPoCkhtFoYmsnaveFv0UCPk8KoPFkn0TyRlsswKAyVIYRvLnq-CoLkAaDP0qN6dcycZFtxWSjy_B4Fpoi.jpg?size=512x512&quality=95&type=album'>
       <div class='container-2'>
         <p class='section-name'>Team Of Professionals</p>
       <p class='text'>We know how to make good dumplings</p>
       </div>
-      <img id='stuff-3' src='https://sun9-north.userapi.com/sun9-87/s/v1/if2/8gZiE0Kzib1lX1r3Tj1cKzOZd8VyMtyCAQU_8UW72keBsS3dPRgEpwDZnDFNxV4TYdW7mgGlcLmOROmIRi6nGATu.jpg?size=512x512&quality=95&type=album'>
+      <img id='stuff-3' width='50px' height='50px'  src='https://sun9-north.userapi.com/sun9-87/s/v1/if2/8gZiE0Kzib1lX1r3Tj1cKzOZd8VyMtyCAQU_8UW72keBsS3dPRgEpwDZnDFNxV4TYdW7mgGlcLmOROmIRi6nGATu.jpg?size=512x512&quality=95&type=album'>
       <div class='container-3'>
         <p class='section-name'>Quality Assurance</p>
         <p class='text'>Even a small workshop that works with a soul must meet European standards</p>
